--- a/app/views/providerDetail.xml
+++ b/app/views/providerDetail.xml
@@ -6,16 +6,17 @@
 			<ImageView id="headerRight" image="/global/add126.png"></ImageView>
 		</View>
 		<View>
-			<ImageView id="providerLogo" image="/global/accountImage.png"></ImageView>
-			<Label id="providerName">Sample Provider</Label>
-			<Label id="providerAddress">Provider Address</Label>
-			<Label id="providerPhone">Provider Phone</Label>
-			<Label id="providerEmail">Provicer contact Email</Label>
-			<Label id="services">Services</Label>
-			<Label id="servicesList">
-				Paleo sriracha post-ironic XOXO craft beer. Seitan quinoa farm-to-table literally cronut. Kale chips skateboard McSweeney's, meditation +1 church-key pour-over Brooklyn trust fund American Apparel art party iPhone. Chillwave migas Williamsburg, pop-up ethical brunch locavore sustainable Marfa. Austin tote bag Helvetica, leggings 90's cray drinking vinegar fap Etsy twee cronut aesthetic church-key. Normcore brunch taxidermy direct trade. Jean shorts Williamsburg Pitchfork flannel art party iPhone.
-			</Label>
-			<Label id="similar" onClick="blackMagic">Similar Providers</Label>
+			<Label id="providerDescription">Mario Brothers Plumbing Inc is the worlds premier service provider in Princess extrication and Bowser removal services.</Label>
+			<Label id="contactContact">Contact</Label>
+			<Label id="providerAddress" html="123 S Park Dr. <br>Dayton OH, 45476"></Label>
+			<Label id="driveButton">Drive</Label>
+			<Label id="providerPhone">provider phone</Label>
+			<Label id="providerEmail">toad@mbros.com</Label>
+			<Label id="providerWeb">www.MBrosPlumbingInc.com</Label>
+			<ImageView id="favoriteIcon" image="/global/heartIcon.png" />
+			<Label id="favorite" textAlign="Titanium.UI.TEXT_ALIGNMENT_CENTER">Tag as Favorite</Label>
+			<ImageView id="shareIcon" image="/global/heartIcon.png" />
+			<Label id="share" textAlign="Titanium.UI.TEXT_ALIGNMENT_CENTER">Share with Friends</Label>
 		</View>
 	</Window>
 </Alloy>
