--- a/app/views/providerList.xml
+++ b/app/views/providerList.xml
@@ -17,7 +17,7 @@
 			<TableViewRow>
 				<View id="row" >
 					<ImageView class="icon" image="/global/info28.png" />
-					<Label id="navText" onClick="connect"> Counseling & Support</Label>
+					<Label id="navText"> Counseling & Support</Label>
 				</View>
 				<View class="dropShadow"></View>
 			</TableViewRow>
