--- a/app/views/providerList.xml
+++ b/app/views/providerList.xml
@@ -24,7 +24,7 @@
 			<TableViewRow>
 				<View id="row" >
 					<ImageView class="icon" image="/global/info28.png" onClick="info"/>
-					<Label id="navText"> Children & Famalies</Label>
+					<Label id="navText"> Children & Families</Label>
 				</View>
 				<View class="dropShadow"></View>
 			</TableViewRow>
