--- a/app/views/header.xml
+++ b/app/views/header.xml
@@ -1,5 +1,5 @@
 <Alloy>
-	<View id="header">
+	<View id="header" platform="ios">
 		<ImageView id="headerLeft" image="/global/blind2.png"></ImageView>
 		<Label id="headerText">Victim Services</Label>
 		<ImageView id="headerRight" image="/global/add126.png"></ImageView>
