--- a/app/views/listOfProviders.xml
+++ b/app/views/listOfProviders.xml
@@ -1,5 +1,37 @@
 <Alloy>
 	<TabGroup>
+		<Tab title="List">
+			<Window>
+				<TableView id="menu">
+					<TableViewSection headerTitle="Mental Health Counseling">
+						
+						<TableViewRow>
+							<View id="row" onClick="providerDetail">
+								<ImageView class="icon" image="/global/linkArrow.png"  />
+								<Label id="providerName">Family Services Association</Label>
+								<Label id="providerDistance"> 3 Miles Away</Label>
+							</View>
+						</TableViewRow>
+						<TableViewRow>
+							<View id="row" >
+								<ImageView class="icon" image="/global/linkArrow.png" />
+								<Label id="providerName">South Community Behavioral Health</Label>
+								<Label id="providerDistance"> 7 Miles Away</Label>
+							</View>
+						</TableViewRow>
+					</TableViewSection>
+					<TableViewSection headerTitle="Domestic Violence Support">
+						<TableViewRow>
+							<View id="row" >
+								<ImageView class="icon" image="/global/linkArrow.png"/>
+								<Label id="providerName">Artemis Domestic Violence Center</Label>
+								<Label id="providerDistance"> 1 Miles Away</Label>
+							</View>
+						</TableViewRow>
+					</TableViewSection>
+				</TableView>
+			</Window>
+		</Tab>
 		<Tab title="Map">
 			<Window>
 			<!--	<View id="map" module="ti.map">
@@ -7,41 +39,6 @@
 				</View>-->
 			<Module id="map" module="ti.map">
 			</Module>
-			</Window>
-		</Tab>
-		<Tab title="List">
-			<Window>
-				<TableView id="menu">
-					<TableViewSection headerTitle="Owl Removal and care">
-						
-						<TableViewRow>
-							<View id="row" onClick="providerDetail">
-								<ImageView class="icon" image="/global/linkArrow.png"  />
-								<Label id="providerName"> Als Owls</Label>
-								<Label id="providerDistance"> 3 Miles Away</Label>
-							</View>
-							<View class="dropShadow"></View>
-						</TableViewRow>
-						<TableViewRow>
-							<View id="row" >
-								<ImageView class="icon" image="/global/linkArrow.png" />
-								<Label id="providerName">Parlement De-Funkadellik </Label>
-								<Label id="providerDistance"> 7 Miles Away</Label>
-							</View>
-							<View class="dropShadow"></View>
-						</TableViewRow>
-					</TableViewSection>
-					<TableViewSection headerTitle="Auxiliary Support">
-						<TableViewRow>
-							<View id="row" >
-								<ImageView class="icon" image="/global/linkArrow.png"/>
-								<Label id="providerName"> Owl Soap Emporium</Label>
-								<Label id="providerDistance"> 1 Miles Away</Label>
-							</View>
-							<View class="dropShadow"></View>
-						</TableViewRow>
-					</TableViewSection>
-				</TableView>
 			</Window>
 		</Tab>
 	</TabGroup>
