--- a/app/views/providerDetail.xml
+++ b/app/views/providerDetail.xml
@@ -1,18 +1,14 @@
 <Alloy>
 	<Window class="container">
-		<View id="header">
-			<ImageView id="headerLeft" image="/global/blind2.png"></ImageView>
-			<Label id="headerText">Providers Details</Label>
-			<ImageView id="headerRight" image="/global/add126.png"></ImageView>
-		</View>
+		<Require src="header"></Require>
 		<View>
-			<Label id="providerDescription">Mario Brothers Plumbing Inc is the worlds premier service provider in Princess extrication and Bowser removal services.</Label>
+			<Label id="providerDescription">Provides community mental health counseling, support services & services for the deaf</Label>
 			<Label id="contactContact">Contact</Label>
-			<Label id="providerAddress" html="123 S Park Dr. <br>Dayton OH, 45476"></Label>
+			<Label id="providerAddress" html="2211 Arbor Blvd. <br>Dayton OH, 45476"></Label>
 			<Label id="driveButton">Drive</Label>
-			<Label id="providerPhone">provider phone</Label>
-			<Label id="providerEmail">toad@mbros.com</Label>
-			<Label id="providerWeb">www.MBrosPlumbingInc.com</Label>
+			<Label id="providerPhone">937.222.9481</Label>
+			<Label id="providerEmail">information@fsadayton.org</Label>
+			<Label id="providerWeb">www.fsadayton.org</Label>
 			<ImageView id="favoriteIcon" image="/global/heartIcon.png" />
 			<Label id="favorite" textAlign="Titanium.UI.TEXT_ALIGNMENT_CENTER">Tag as Favorite</Label>
 			<ImageView id="shareIcon" image="/global/heartIcon.png" />
