--- a/app/views/serviceProviders.xml
+++ b/app/views/serviceProviders.xml
@@ -1,10 +1,6 @@
 <Alloy>
 	<Window class="container">
-		<View id="header">
-			<ImageView id="headerLeft" image="/global/blind2.png"></ImageView>
-			<Label id="headerText">Service Providers</Label>
-			<ImageView id="headerRight" image="/global/add126.png"></ImageView>
-		</View>
+		<Require src="header"></Require>
 		
 		<TableView id="providerTable">
 			<SearchBar id="search"></SearchBar>
