new icons updated map updated provider detail page

--- a/app/views/serviceProviderRow.xml
+++ b/app/views/serviceProviderRow.xml
@@ -1,6 +1,6 @@
 <Alloy>
 	<TableViewRow id="row" class="defaultRow">
 		<Label id="providerName"/>
-		<Label id="providerDistance"/>
+		<Label id="subtext"/>
 	</TableViewRow>
 </Alloy>
