--- a/app/views/providerCategories.xml
+++ b/app/views/providerCategories.xml
@@ -1,14 +1,14 @@
 <Alloy>
-	<TabGroup>
+	<TabGroup id="tabGroup">
 		<Tab title="GENERAL">
-			<Window class="container">
+			<Window class="container" id="win">
 				<TableView id="generalTable" class="menu" onClick="listProviders">
 				</TableView>
 			</Window>
 		</Tab>
 		<Tab title="CRIME">
-			<Window class="container">
-				<TableView id="crimeTable" class="menu">
+			<Window class="container" id="win">
+				<TableView id="crimeTable" class="menu" onClick="listProviders">
 				</TableView>
 			</Window>
 			
