--- a/app/views/serviceProviders.xml
+++ b/app/views/serviceProviders.xml
@@ -1,7 +1,7 @@
 <Alloy>
-	<TabGroup>
+	<TabGroup id="tabGroup">
 		<Tab title="NEARBY">
-			<Window>
+			<Window id="win">
 				<TableView id="menu" class="menu" onClick="providerDetail" visible=true>
 				</TableView>
 				<View id="mapModule" height="90%" visible=false top=0>
@@ -16,7 +16,7 @@
 						<ImageView id="mapImage" class="buttonBarImage" image="/global/map256.png"/>
 						<Label id="mapLabel" class="buttonBarLabel">MAP</Label>
 					</View>
-					<View id="filterView" class="buttonBarAction" right="0">
+					<View id="filterView" class="buttonBarAction" right="0" onClick="filterResults">
 						<ImageView id="mapImage" class="buttonBarImage" image="/global/filter256.png"/>
 						<Label id="mapLabel" class="buttonBarLabel">FILTER</Label>
 					</View>
@@ -24,7 +24,7 @@
 			</Window>
 		</Tab>
 		<Tab title="QUICK CALL">
-			<Window>
+			<Window id="win">
 			<TableView id="crisisMenu" class="menu" onClick="callPhoneNumber">
 			</TableView>
 			</Window>
