--- a/app/views/crisisLines.xml
+++ b/app/views/crisisLines.xml
@@ -1,5 +1,5 @@
 <Alloy>
-	<Window class="container" id="win" layout="vertical">
+	<Window class="container" id="win" layout="vertical" onOpen="Alloy.Globals.updateActionBar">
 		<View class="divider"/>
 		<TableView id="crisisLineTable" onClick="callPhoneNumber">
 		</TableView>
