--- a/app/views/serviceProviders.xml
+++ b/app/views/serviceProviders.xml
@@ -3,22 +3,23 @@
 		<Tab title="NEARBY">
 			<Window id="win">
 				<ActivityIndicator id="activityIndicator"/>
-				<Label id="noResults" zIndex=1 visible=false>No results.</Label>
-				<TableView id="providerList" class="menu" onClick="providerDetail" visible=true filterAttribute="title">
-				</TableView>
+				<View id="listView">
+					<Label id="noResults" zIndex=1 visible=false>No results.</Label>
+					<TableView id="providerList" class="menu" onClick="providerDetail" visible=true filterAttribute="title" />
+				</View>
 				<View id="mapModule" height="90%" visible=false top=0>
 					<Module id="map" module="ti.map" />
 				</View>
 				<View id="buttonBar">
-					<View id="listView" class="buttonBarAction" left="0" visible=false onClick="toggleMapListView">
+					<View id="listButton" class="buttonBarAction" left="0" visible=false onClick="toggleMapListView">
 						<ImageView id="listImage" class="buttonBarImage" image="/global/list256.png"/>
 						<Label id="listImage" class="buttonBarLabel">LIST</Label>
 					</View>
-					<View id="mapView" class="buttonBarAction" left="0" onClick="toggleMapListView" visible=true>
+					<View id="mapButton" class="buttonBarAction" left="0" onClick="toggleMapListView" visible=true>
 						<ImageView id="mapImage" class="buttonBarImage" image="/global/map256.png"/>
 						<Label id="mapLabel" class="buttonBarLabel">MAP</Label>
 					</View>
-					<View id="filterView" class="buttonBarAction" right="0" onClick="filterResults">
+					<View id="filterButton" class="buttonBarAction" right="0" onClick="filterResults">
 						<ImageView id="mapImage" class="buttonBarImage" image="/global/filter256.png"/>
 						<Label id="mapLabel" class="buttonBarLabel">FILTER</Label>
 					</View>
