--- a/app/views/serviceProviderFilter.xml
+++ b/app/views/serviceProviderFilter.xml
@@ -32,12 +32,10 @@
 					<Label>COUNTIES</Label>
 					<ImageView class="arrow" id="leftArrow" left="10dp" image="/global/back-arrow.png" onClick="gotoPrevious" />
 				</View>
-				<!--<View id="countiesPicker">
-					<TableView id="countyList"></TableView>
-			</View>-->
+				<SearchBar platform="android"  id="searchBar" height="50dp" backgroundColor="#D2B48C"/>
 				<ScrollView scrollType="vertical" backgroundColor="#fff">
 					<View id="countiesPicker"/>
-			</ScrollView>
+				</ScrollView>
 			</View>
 		</ScrollableView>
 	</Window>
