--- a/app/views/account.xml
+++ b/app/views/account.xml
@@ -1,27 +1,54 @@
 <Alloy>
 	<Window id="win" onOpen="Alloy.Globals.updateActionBar">
-		<Require src="header"></Require>
+		<!--<Require src="header"></Require>-->
 		<View class="divider"/>
-		<ImageView id="accountImage" image="/global/user256.png" />
+		<ImageView onClick="doSomething" id="accountImage" image="/global/user256.png" />
 		<Label id="name">Jane Doe</Label>
-		<Label class="headerLabel">TRUSTED CONTACTS</Label>
-		<TableView id="contactTable">
-			<TableViewRow>
-				<Label>John Doe • 937.554.5767</Label>
-			</TableViewRow>
-			<TableViewRow>
-				<Label>Harry Smith • 419.344.5555</Label>
-			</TableViewRow>
-			<TableViewRow>
-				<Label>Mary Thompson • 937.555.1234</Label>
-			</TableViewRow>
-
-		</TableView>
-		<Label class="headerLabel">FAVORITE SERVICES</Label>
-		<Label>No favorites have been saved.</Label>
+		<View id="profileBar">
+			<View id="profile" class="profileView" backgroundColor="#e9e9e9" onClick="toggleSelection">
+				<ImageView class="profileButton" image="/global/round58.png" />
+			</View>
+			<View id="trustedContacts" class="profileView" onClick="toggleSelection">			
+				<ImageView class="profileButton" image="/global/add126.png" />
+			</View>
+			<View id="favorites" class="profileView" onClick="toggleSelection">			
+				<ImageView class="profileButton" image="/global/star256.png" />
+			</View>
+		</View>
 		
-		<Label class="headerLabel">COUNTY OF INTEREST</Label>
-		<Label>Montgomery County - Ohio</Label>
-	
+		<ScrollableView id="profileScroll">
+			<View layout="vertical">
+				<Label class="headerLabel">PROFILE SUMMARY</Label>
+				<View layout="horizontal" height="60%" width="90%">
+					<Label class="sentence">My name is</Label>
+					<TextField class="sentence" editable=false value="Jane Doe" onBlur="change" onClick="editing"/>
+					<Label class="sentence">and I want</Label>
+					<Label class="sentence">to see</Label> 
+					<Label class="sentence">services in</Label>
+					<TextField class="sentence" editable=false value="Montgomery" onClick="editing"/>
+					<Label class="sentence">county.</Label>
+				</View>
+				
+				<Button bottom="10dp">Update Profile Picture</Button>
+			</View>
+			<View>
+				<Label class="headerLabel">TRUSTED CONTACTS</Label>
+				<TableView id="contactTable" onClick="viewContacts">
+					<TableViewRow>
+						<Label>John Doe • 937.554.5767</Label>
+					</TableViewRow>
+					<TableViewRow>
+						<Label>Harry Smith • 419.344.5555</Label>
+					</TableViewRow>
+					<TableViewRow>
+						<Label>Mary Thompson • 937.555.1234</Label>
+					</TableViewRow>
+				</TableView>
+			</View>
+			<View>
+				<Label class="headerLabel">FAVORITE SERVICES</Label>
+				<Label>No favorites have been saved.</Label>
+			</View>
+		</ScrollableView>
 	</Window>
 </Alloy>
