--- a/app/views/account.xml
+++ b/app/views/account.xml
@@ -1,9 +1,10 @@
 <Alloy>
+	<Model src="profileBasics"/>
 	<Window id="win" onOpen="Alloy.Globals.updateActionBar">
 		<!--<Require src="header"></Require>-->
 		<View class="divider"/>
-		<ImageView id="accountImage" image="/global/user256.png" />
-		<Label id="name">Jane Doe</Label>
+		<ImageView id="accountImage" />
+		<Label id="name" text="{profileBasics.name}"/>
 		<View id="profileBar">
 			<View id="profile" class="profileView" backgroundColor="#e9e9e9" onClick="toggleSelection">
 				<ImageView class="profileButton" image="/global/round58.png" />
@@ -21,11 +22,11 @@
 				<Label class="headerLabel">PROFILE SUMMARY</Label>
 				<View layout="horizontal" height="60%" width="90%">
 					<Label class="sentence">My name is</Label>
-					<TextField class="sentence" editable=false focusable=false value="Jane Doe" onBlur="change" onClick="editing"/>
+					<TextField class="sentence" editable=false focusable=false value="{profileBasics.name}" onClick="editing"/>
 					<Label class="sentence">and I want</Label>
 					<Label class="sentence">to see</Label> 
 					<Label class="sentence">services in</Label>
-					<TextField class="sentence" editable=false focusable=false value="Montgomery" onClick="pickCounty"/>
+					<TextField id="county" class="sentence" editable=false focusable=false value="{profileBasics.county}" onClick="pickCounty"/>
 					<Label class="sentence">county.</Label>
 				</View>
 				
