revise county selection

--- a/app/views/countySelectorView.xml
+++ b/app/views/countySelectorView.xml
@@ -1,13 +1,6 @@
 <Alloy>
-	<View id="countiesContainer" class="container">
-		<View class="header">
-			<Label>COUNTIES</Label>
-			<ImageView class="arrow" id="leftImage" left="10dp" visible="false" />
-			<ImageView class="arrow" id="rightImage" right="10dp" visible="false" />
-		</View>
-		<SearchBar platform="android"  id="searchBar" height="50dp" backgroundColor="#D2B48C"/>
-		<ScrollView scrollType="vertical" backgroundColor="#fff">
-			<View id="countiesPicker"/>
-		</ScrollView>
-	</View>
+	<SearchBar platform="android"  id="searchBar" />
+	<ScrollView scrollType="vertical" >
+		<View id="countiesPicker"/>
+	</ScrollView>
 </Alloy>
