--- a/app/views/account.xml
+++ b/app/views/account.xml
@@ -3,7 +3,7 @@
 	<Window id="win" onOpen="Alloy.Globals.updateActionBar">
 		<!--<Require src="header"></Require>-->
 		<View class="divider"/>
-		<ImageView id="accountImage" />
+		<ImageView id="accountImage" image="{profileBasics.profile_pic}"/>
 		<Label id="name" text="{profileBasics.name}"/>
 		<View id="profileBar">
 			<View id="profile" class="profileView" backgroundColor="#e9e9e9" onClick="toggleSelection">
@@ -22,7 +22,7 @@
 				<Label class="headerLabel">PROFILE SUMMARY</Label>
 				<View layout="horizontal" height="60%" width="90%">
 					<Label class="sentence">My name is</Label>
-					<TextField class="sentence" editable=false focusable=false value="{profileBasics.name}" onClick="editing"/>
+					<TextField id="nameField" class="sentence" editable=false focusable=false value="{profileBasics.name}" onClick="updateProfile"/>
 					<Label class="sentence">and I want</Label>
 					<Label class="sentence">to see</Label> 
 					<Label class="sentence">services in</Label>
