--- a/app/views/account.xml
+++ b/app/views/account.xml
@@ -20,17 +20,17 @@
 		<ScrollableView id="profileScroll">
 			<View layout="vertical">
 				<Label class="headerLabel">PROFILE SUMMARY</Label>
-				<ScrollView layout="vertical" height="70%">
-					<View layout="horizontal" width="90%" height="52%">
+				<ScrollView height="70%" showVerticalScrollIndicator=true>
+					<View layout="horizontal" width="90%" top="5dp">
 						<Label class="sentence">My name is</Label>
 						<TextField id="nameField" class="sentence" editable=false focusable=false value="{profileBasics.name}" onClick="updateProfile"/>
 						<Label class="sentence">and I want</Label>
 						<Label class="sentence">to see</Label> 
 						<Label class="sentence">services in</Label>
-						<TextField id="county" class="sentence" editable=false focusable=false value="{profileBasics.county}" onClick="pickCounty"/>
+						<TextField id="county" class="sentence" editable=false focusable=false value="{profileBasics.countyName}" onClick="pickCounty"/>
 						<Label class="sentence">county.</Label>
 					</View>
-					<View layout="horizontal" width="90%" height="55%" >
+					<View layout="horizontal" width="90%" top="70%" height="50%">
 						<Label class="sentence">My 'quick-hide'</Label>
 						<Label class="sentence">website is</Label>
 						<TextField id="website" class="sentence" editable=false focusable=false value="{profileBasics.website}" onClick="updateProfile"/>
