mostly working trusted contacts

--- a/app/views/account.xml
+++ b/app/views/account.xml
@@ -3,8 +3,14 @@
 	<Window id="win" onOpen="Alloy.Globals.updateActionBar">
 		<!--<Require src="header"></Require>-->
 		<View class="divider"/>
-		<ImageView id="accountImage" image="{profileBasics.profile_pic}"/>
-		<Label id="name" text="{profileBasics.name}"/>
+		<View id="centeredView" height="15%">
+			<View id="profile" layout="horizontal" bottom="10dp" top="10dp">
+				<ImageView id="accountImage" image="{profileBasics.profile_pic}"/>
+				<Label id="name" text="{profileBasics.name}"/>
+			</View>
+		</View>
+		
+		
 		<View id="profileBar">
 			<View id="profile" class="profileView" backgroundColor="#e9e9e9" onClick="toggleSelection">
 				<ImageView class="profileButton" image="/global/round58.png" />
@@ -30,7 +36,7 @@
 						<TextField id="county" class="sentence" editable=false focusable=false value="{profileBasics.countyName}" onClick="pickCounty"/>
 						<Label class="sentence">county.</Label>
 					</View>
-					<View layout="horizontal" width="90%" top="70%" height="50%">
+					<View layout="horizontal" width="90%" top="65%" height="50%">
 						<Label class="sentence">My 'quick-hide'</Label>
 						<Label class="sentence">website is</Label>
 						<TextField id="website" class="sentence" editable=false focusable=false value="{profileBasics.website}" onClick="updateProfile"/>
@@ -38,22 +44,22 @@
 				</ScrollView>
 				<Button bottom="10dp" onClick="updateProfilePic">Update Profile Picture</Button>
 			</View>
-			<View>
+			<View layout="vertical">
 				<Label class="headerLabel">TRUSTED CONTACTS</Label>
-				<TableView id="contactTable">
-					<TableViewRow>
-						<Label>John Doe • 937.554.5767</Label>
-					</TableViewRow>
-					<TableViewRow>
-						<Label>Harry Smith • 419.344.5555</Label>
-					</TableViewRow>
-					<TableViewRow>
-						<Label>Mary Thompson • 937.555.1234</Label>
-					</TableViewRow>
+				<TableView id="contactTable" dataCollection="trustedContacts">
+					<Require src="trustedContactRow"></Require>
 				</TableView>
-				<Label>EMERGENCY MESSAGE</Label>
-				<TextField value="{profileBasics.emergency_message}"></TextField>
+				<Label class="headerLabel">EMERGENCY MESSAGE</Label>
+				<TextArea id="trustedMessageEdit" value="{profileBasics.emergency_message}" onReturn="saveMessage"></TextArea>
 				<Button onClick="addContact">Add New Contact</Button>
+				<AlertDialog id="dialog" title="Add Contact" onClick="doClick"
+			message="How would you like to add this new trusted contact?" cancel="2">
+			<ButtonNames>
+				<ButtonName>Manually</ButtonName>
+				<ButtonName>From My Contact List</ButtonName>
+				<ButtonName>Cancel</ButtonName>
+			</ButtonNames>
+	</AlertDialog>
 			</View>
 			<View>
 				<Label class="headerLabel">FAVORITE SERVICES</Label>
