--- a/app/views/profileModal.xml
+++ b/app/views/profileModal.xml
@@ -1,5 +1,5 @@
 <Alloy>
-	<Window class="modal" onOpen="Alloy.Globals.updateActionBar" id="win">
+	<Window class="modal gradient" onOpen="Alloy.Globals.updateActionBar" id="win">
 		<View class="header">
 			<Label id="headerLabel"/>
 			<ImageView class="arrow" image="/global/close.png" id="leftImage" left="10dp" onClick="close"/>
@@ -8,9 +8,13 @@
 		<View id="counties" visible="false" class="container">
 			<Require id="countySelector" src="countySelectorView" />
 		</View>
-		<View id="generalTextView" visible="false" class="container" backgroundColor="#fff">
-			<Label color="black" id="description"/>
+		<View id="generalTextView"  class="container general">
+			<Label class="description" id="description"/>
 			<TextField id="generalTextField" />
+		</View>
+		<View id="subTextView" class="container general" top="27%">
+			<Label class="description" id="subDescription" />
+			<TextField id="subTextField" keyboardType="Ti.UI.KEYBOARD_NUMBER_PAD"/>
 		</View>
 	</Window>
 </Alloy>
