--- a/app/views/account.xml
+++ b/app/views/account.xml
@@ -1,16 +1,12 @@
 <Alloy>
-	<Model src="profileBasics"/>
 	<Window id="win" onOpen="Alloy.Globals.updateActionBar" onClose="destroy">
-		<!--<Require src="header"></Require>-->
 		<View class="divider"/>
 		<View id="centeredView" height="15%">
-			<View id="profile" layout="horizontal" bottom="10dp" top="10dp">
+			<View id="profileHeader" layout="horizontal" bottom="10dp" top="10dp">
 				<ImageView id="accountImage" image="{profileBasics.profile_pic}"/>
 				<Label id="name" text="{profileBasics.name}"/>
 			</View>
 		</View>
-		
-		
 		<View id="profileBar">
 			<View id="profile" class="profileView" backgroundColor="#e9e9e9" onClick="toggleSelection">
 				<ImageView class="profileButton" image="/global/round58.png" />
@@ -22,8 +18,7 @@
 				<ImageView class="profileButton" image="/global/star256.png" />
 			</View>
 		</View>
-		
-		<ScrollableView id="profileScroll">
+		<ScrollableView id="profileScroll" scrollingEnabled="false">
 			<View layout="vertical">
 				<Label class="headerLabel">PROFILE SUMMARY</Label>
 				<ScrollView height="70%" showVerticalScrollIndicator=true>
@@ -47,27 +42,34 @@
 			<View layout="vertical">
 				<Label class="headerLabel">TRUSTED CONTACTS</Label>
 				<ScrollView layout="vertical">
-					<TableView id="contactTable" dataCollection="trustedContacts">
-						<Require src="trustedContactRow"></Require>
-					</TableView>
+					<View id="contactTableView">
+						<TableView id="contactTable" dataCollection="trustedContacts" onPostlayout="updateLabel">
+							<Require src="trustedContactRow"></Require>
+						</TableView>
+						<Label id="noContacts" visible=false>No trusted contacts added.</Label>
+					</View>
+					
 					<Label class="headerLabel">EMERGENCY MESSAGE</Label>
 					<TextArea id="trustedMessageEdit" bottom="10dp" value="{profileBasics.emergency_message}" onReturn="saveMessage"></TextArea>
 					<Button onClick="addContact">Add New Contact</Button>
 				</ScrollView>
 				<AlertDialog id="dialog" title="Add Contact" onClick="doClick"
-			message="How would you like to add this new trusted contact?" cancel="2">
-			<ButtonNames>
-				<ButtonName>Manually</ButtonName>
-				<ButtonName>From My Contact List</ButtonName>
-				<ButtonName>Cancel</ButtonName>
-			</ButtonNames>
-	</AlertDialog>
+					message="How would you like to add this new trusted contact?" cancel="2">
+					<ButtonNames>
+						<ButtonName>Manually</ButtonName>
+						<ButtonName>From My Contact List</ButtonName>
+						<ButtonName>Cancel</ButtonName>
+					</ButtonNames>
+				</AlertDialog>
 			</View>
 			<View layout="vertical">
 				<Label class="headerLabel">FAVORITE SERVICES</Label>
-				<TableView id="favoriteServicesTable" dataCollection="favorites">
-					<Require src="favoriteProviderRow"></Require>		
-				</TableView>
+				<View id="favoriteServicesTableView">
+					<TableView id="favoriteServicesTable" dataCollection="favorites" onPostlayout="updateLabel">
+						<Require src="favoriteProviderRow"></Require>		
+					</TableView>
+					<Label id="noFavorites" top="25%" visible="false">No favorites added.</Label>
+				</View>
 			</View>
 		</ScrollableView>
 	</Window>
