Added ability to download VINE app from app store. Added quick hide/help buttons to service provider menu.

--- a/app/views/corrections.xml
+++ b/app/views/corrections.xml
@@ -9,6 +9,7 @@
 			<Require src="providerDetail" 
 				description="VINE allows crime victims to obtain timely and reliable information about criminal cases and the custody status of offenders 24 hours a day."
 				website="https://www.vinelink.com/"
+				hasApp=true
 				orgName="Victim Information and Notification Everyday"/>
 		</Tab>
 	</TabGroup>
