--- a/app/views/corrections.xml
+++ b/app/views/corrections.xml
@@ -2,7 +2,8 @@
 	<TabGroup id="tabGroup" onOpen="Alloy.Globals.updateActionBar">
 		<Tab title="LOCAL LAW">
 			<Window class="container" id="win">
-				<Label>Nothing to see here.</Label>
+				<Require src="serviceProviderListView" providerType="corrections"/>
+				<Require src="serviceProviderButtonBar" />
 			</Window>
 		</Tab>
 		<Tab title="VINE">
