--- a/app/views/victimCompensation.xml
+++ b/app/views/victimCompensation.xml
@@ -1,5 +1,6 @@
 <Alloy>
 	<Window class="container" id="win" onOpen="Alloy.Globals.updateActionBar">
-		<Label>Nothing to see here.</Label>
+		<Require id="providerList" src="serviceProviderListView" providerType="compensation"/>
+		<Require id="providerButtonBar" src="serviceProviderButtonBar" />
 	</Window>
 </Alloy>
